--- a/static/css/poole.css
+++ b/static/css/poole.css
@@ -48,14 +48,14 @@ body {
 
 html {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.6;
 }
-@media (min-width: 38rem) {
-  html {
-    font-size: 16px;
-  }
-}
+/* @media (min-width: 48rem) { */
+/*   html { */
+/*     font-size: 18px; */
+/*   } */
+/* } */
 
 body {
   color: #515151;
@@ -260,8 +260,8 @@ img {
 }
 
 figure {
-    margin-right: -140px;
-    margin-left: -60px;
+    margin-right: -100px;
+    margin-left: -20px;
     max-width: 900px;
 }
 
